src/objects/Design__c.object
<CustomObject>
    <description>Multiple designs may be created, one will be chosen for Constuction</description>
    <fields>
        <fullName>Distribution_Design_Business_Days__c</fullName>
        <label>Distribution Design Business Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distribution_Design_Finished_Act__c</fullName>
        <inlineHelpText>Date utility finishes distribution design</inlineHelpText>
        <label>Distribution Design Finished Act</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distribution_Design_Finished_Est__c</fullName>
        <label>Distribution Design Finished Est</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distribution_Design_Started__c</fullName>
        <inlineHelpText>Date utility begins work on design</inlineHelpText>
        <label>Distribution Design Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspire_Project__c</fullName>
        <label>Inspire Project</label>
        <referenceTo>inspire1__Project__c</referenceTo>
        <relationshipLabel>Designs</relationshipLabel>
        <relationshipName>Designs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>On_Site_Meeting_Notes__c</fullName>
        <label>On-Site Meeting Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>On_Site_Meeting__c</fullName>
        <label>On-Site Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>On_Site_Pole_Staking_Meeting_Notes__c</fullName>
        <label>On-Site Pole Staking Meeting Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>On_Site_Pole_Staking_Meeting__c</fullName>
        <label>On-Site Pole Staking Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Selected_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is the design chosen for construction</inlineHelpText>
        <label>Selected Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Substation_Design_Business_Days__c</fullName>
        <label>Substation Design Business Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Substation_Design_Finished_Act__c</fullName>
        <inlineHelpText>Date utility completes substation design</inlineHelpText>
        <label>Substation Design Finished Act</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Substation_Design_Finished_Est__c</fullName>
        <inlineHelpText>Substation design finished date is projection</inlineHelpText>
        <label>Substation Design Finished Est</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Substation_Design_Started__c</fullName>
        <inlineHelpText>Date utility starts work on substation design</inlineHelpText>
        <label>Substation Design Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Utility_Design_Engineer_Contact__c</fullName>
        <label>Utility Design Engineer Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Design_Engineer__c</fullName>
        <description>Name of the engineer assigned to the project</description>
        <label>Utility Design Engineer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Design</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>D-{0}</displayFormat>
        <label>Design</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Designs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>